Criando campos separados para lastid e lastdate
